# notion-newsroom

./: .env.example  .gitignore  README.md  pyproject.toml
src/newsroom/: __init__.py  config.py  constants.py  main.py  types.py
src/newsroom/analytics/: __init__.py  google.py  plausible.py
src/newsroom/chroma/: __init__.py  manager.py
src/newsroom/llm/: __init__.py  generator.py
src/newsroom/mcp/: __init__.py  server.py
src/newsroom/notion/: __init__.py  blocks.py  client.py  sync_archive.py  sync_csv_archive.py
src/newsroom/scheduler/: __init__.py  jobs.py
src/newsroom/workflows/: __init__.py  agency_bridge.py  context_hunter.py  narrative_auditor.py  traffic_strategist.py
tests/: test_llm_generator.py  test_mcp_tools.py  test_notion_blocks.py  test_scheduler_jobs.py
tests/test_workflows/: test_context_hunter.py
